# mcp-hnpx

./: .gitignore  .roomodes  LICENSE  README.md  example.xml  pyproject.toml  system-prompt-bible-writer  system-prompt-hnpx-editor
docs/: HNPX.md  HNPX.xml  mcp-details.md  mcp-tools.md
src/hnpx_sdk/: cli.py
src/mcp_hnpx/: __init__.py  errors.py  hnpx.py  hnpx_utils.py  server.py  tools.py  validation.py
src/mcp_hnpx/tools/: creation.py  document.py  inspection.py  modification.py  navigation.py  rendering.py
tests/: conftest.py  test_creation.py  test_document.py  test_errors.py  test_hnpx.py  test_hnpx_utils.py  test_inspection.py  test_modification.py  test_navigation.py  test_rendering.py  test_server.py  test_tools.py  test_validation.py
tests/resources/: example.xml  incomplete.xml
