[project]
name = "mcp-hnpx"
version = "0.1.0"
description = "MCP server for editing HNPX documents"
readme = "README.md"
authors = [
    { name = "Vasiliy Mozhaev", email = "mozhay2005@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
