[project]
name = "mcp-hnpx"
version = "0.1.0"
description = "MCP server for editing HNPX documents"
readme = "README.md"
authors = [
    { name = "Vasiliy Mozhaev", email = "mozhay2005@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.0.0",
    "fastmcp>=2.13.3",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pip>=25.3",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
mcp-hnpx = "mcp_hnpx:app.run"
